--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="TextUtils is a text app which can manipulate your text in the way you want."
+      content="TextUtils is a word counter and character counting app which can manipulate your text in the way you want.In this you can convert your text uppercase to lowercase and lowercase to uppercase, copy your text to clipboard, remove extra spaces as well as you can clear your text."
     />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon-16x16.png" />
@@ -25,7 +25,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>TextUtils-Home</title>
+    <title>TextUtils- word counter | character counter</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
